--- a/docker/Dockerfile-imagesim
+++ b/docker/Dockerfile-imagesim
@@ -15,7 +15,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 ENV HOME=/project
 
 # Install any needed packages from apt
-RUN apt-get update && apt-get install -y sudo python3 python3-pip python3-pil wget unzip
+RUN apt-get update && apt-get install -y sudo python3 python3-pip python3-pil wget unzip parallel
 # RUN pip3 install --trusted-host pypi.python.org -r xxxx
 
 # Configure user
